--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@types/node": "^13.5.0",
+    "@discordjs/uws": "^10.149.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/lodash": "^4.14.149",
     "@types/lowdb": "^1.0.9",
+    "@types/node": "^13.5.0",
     "@types/node-schedule": "^1.3.0",
-    "@discordjs/uws": "^10.149.0",
     "@types/request-promise": "^4.1.45",
-    "husky": "^4.2.1",
+    "husky": "^4.2.3",
     "prettier": "^1.19.1",
-    "tslint": "^6.0.0",
-    "tsc-watch": "^4.1.0"
+    "tsc-watch": "^4.2.3",
+    "tslint": "^6.1.0"
   }
 }
